--- a/RAxML_Tree.config
+++ b/RAxML_Tree.config
@@ -5,9 +5,9 @@
 
 params {
 	// Paths - Update only the starting directory for the pipeline.
-	UnalignDir = "/rds/general/user/dthorbur/home/02_Projects/03_Protamine_Phylogeny/06_Candidate_wUTRs/07_Alignment/01_Unaligned"
-	AlignDir = "./01_Aligned" 							  // Only change if you are skipping the alignment step
-	TreePartsDir = "./02_Tree_Parts"					// Only change if you are skipping the ML or BS steps
+	UnalignDir = "/path/to/unlaigned/fastas"		//  - Required - 
+	AlignDir = "./01_Aligned" 				// Only change if you are skipping the alignment step
+	TreePartsDir = "./02_Tree_Parts"			// Only change if you are skipping the ML or BS steps
 	OutDir = "./03_Final_Trees"
 
 
@@ -35,10 +35,10 @@ params {
   
   
   // Alignment options
-	ALN_threads = 8		    								// 8 for throughput node, 32 for general node
-	ALN_memory = 32 									    // Number of Gb for HPC slave job
+	ALN_threads = 8		    				// 8 for throughput node, 32 for general node
+	ALN_memory = 32 					// Number of Gb for HPC slave job
 	ALN_walltime = 12
-	ALN_mafft_Iters = 1000 								// MAFFT only - number of iterations
+	ALN_mafft_Iters = 1000 					// MAFFT only - number of iterations
 	ALN_mafft_argmts = "--globalpair"			// MAFFT only - additional arguments for mafft, see https://mafft.cbrc.jp/alignment/software/manual/manual.html
 
 
@@ -46,26 +46,26 @@ params {
 	ML_threads = 8				   
 	ML_memory = 12
 	ML_walltime = 24
-	ML_Model = "GTRGAMMA" 						    // Model of rate substitution - also used in bootstrapping
-	ML_Seed = 123123									    // Random starting seed for reproducibility
-	ML_Iters = 20										      // Number of ML tree iterations (20 is best practise in RAxML docs)
-	ML_argmts = ""										    // Optional arguments to add, such as "-o Seq_name" for an outgroup
+	ML_Model = "GTRGAMMA" 					// Model of rate substitution - also used in bootstrapping
+	ML_Seed = 123123					// Random starting seed for reproducibility
+	ML_Iters = 20						// Number of ML tree iterations (20 is best practise in RAxML docs)
+	ML_argmts = ""						// Optional arguments to add, such as "-o Seq_name" for an outgroup
 
 
 	// Bootstrapping options
 	BS_threads = 1				   
 	BS_memory = 12
 	BS_walltime = 24
-	BS_argmts = ""							    			// Optional arguments to add, such as "-o Seq_name" for an outgroup
-	BT_par_jobs = 10 						    			// The number of parallel jobs to run bootstraps, where each with compute ${BS_bootstraps}/${BT_par_jobs} boostraps each
-	BS_bootstraps = 1000				    		  // By default the script will run ${BT_par_jobs} parallel nodes building 
-														            // Ensure ${BS_bootstraps}/${BT_par_jobs} comes our as a whole number or bootstraps will be missing. 
+	BS_argmts = ""						// Optional arguments to add, such as "-o Seq_name" for an outgroup
+	BT_par_jobs = 10 					// The number of parallel jobs to run bootstraps, where each with compute ${BS_bootstraps}/${BT_par_jobs} boostraps each
+	BS_bootstraps = 1000				    	// By default the script will run ${BT_par_jobs} parallel nodes building 
+								// Ensure ${BS_bootstraps}/${BT_par_jobs} comes our as a whole number or bootstraps will be missing. 
 
 
 	// Final tree options
 	BT_threads = 1				   
 	BT_memory = 12
 	BT_walltime = 24
-	BT_Seed = 123098								    	// Random seed for reproducibility
-	BT_argmts = ""										    // Optional arguments to add, such as "-o Seq_name" for an outgroup
+	BT_Seed = 123098					// Random seed for reproducibility
+	BT_argmts = ""						// Optional arguments to add, such as "-o Seq_name" for an outgroup
 }
